--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.24.2",
+    "antd": "^5.24.3",
     "axios": "^1.8.1",
     "http-proxy-middleware": "^3.0.3",
+    "mqtt": "^5.10.4",
     "react": "^19.0.0",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
